parser/tests/bad/ref01-1.st
% identifier 'x' is not declared
%   identifier reference

var i := j
